--- a/trisagion.cabal
+++ b/trisagion.cabal
@@ -44,6 +44,7 @@ library
         -- GHC 9.10.
         base >=4.20 && <4.21,
         -- Libraries.
+        mtl >=2.3 && <2.4,
     build-depends:
     other-modules:
     exposed-modules:
