Parsers `eoi` and `one`.

--- a/trisagion.cabal
+++ b/trisagion.cabal
@@ -58,3 +58,4 @@ library
         Trisagion.ParserT
         Trisagion.Parsers.Combinators
         Trisagion.Parsers.ParseError
+        Trisagion.Parsers.Streamable
