--- a/trisagion.cabal
+++ b/trisagion.cabal
@@ -55,6 +55,7 @@ library
         Trisagion.Types.ParseError
         Trisagion.Typeclasses.Streamable
         Trisagion.Typeclasses.HasOffset
+        Trisagion.Typeclasses.Splittable
         Trisagion.ParserT
         Trisagion.Parsers.Combinators
         Trisagion.Parsers.ParseError
