--- a/trisagion.cabal
+++ b/trisagion.cabal
@@ -60,3 +60,4 @@ library
         Trisagion.Parsers.Combinators
         Trisagion.Parsers.ParseError
         Trisagion.Parsers.Streamable
+        Trisagion.Parsers.Splittable
