--- a/trisagion.cabal
+++ b/trisagion.cabal
@@ -55,7 +55,9 @@ library
         Trisagion.Types.ParseError
         Trisagion.Typeclasses.Streamable
         Trisagion.Typeclasses.HasOffset
+        Trisagion.Typeclasses.Splittable
         Trisagion.ParserT
         Trisagion.Parsers.Combinators
         Trisagion.Parsers.ParseError
         Trisagion.Parsers.Streamable
+        Trisagion.Parsers.Splittable
