Factor out `withParseError`.

--- a/trisagion.cabal
+++ b/trisagion.cabal
@@ -59,6 +59,5 @@ library
         -- Trisagion.Typeclasses.Splittable
         Trisagion.ParserT
         Trisagion.Parsers.Combinators
-        Trisagion.Parsers.ParseError
-        Trisagion.Parsers.Streamable
+        -- Trisagion.Parsers.Streamable
         -- Trisagion.Parsers.Splittable
