--- a/trisagion.cabal
+++ b/trisagion.cabal
@@ -59,5 +59,5 @@ library
         -- Trisagion.Typeclasses.Splittable
         Trisagion.ParserT
         Trisagion.Parsers.Combinators
-        -- Trisagion.Parsers.Streamable
+        Trisagion.Parsers.Streamable
         -- Trisagion.Parsers.Splittable
