--- a/trisagion.cabal
+++ b/trisagion.cabal
@@ -60,4 +60,4 @@ library
         Trisagion.ParserT
         Trisagion.Parsers.Combinators
         Trisagion.Parsers.Streamable
-        -- Trisagion.Parsers.Splittable
+        Trisagion.Parsers.Splittable
