--- a/trisagion.cabal
+++ b/trisagion.cabal
@@ -63,3 +63,4 @@ library
         Trisagion.Parsers.Streamable
         Trisagion.Parsers.Splittable
         Trisagion.Parsers.Word8
+        Trisagion.Parsers.Char
