--- a/trisagion.cabal
+++ b/trisagion.cabal
@@ -27,6 +27,7 @@ library
         DerivingStrategies
         DerivingVia
         FunctionalDependencies
+        RequiredTypeArguments
     ghc-options:
         -Wall
         -Wcompat
