--- a/trisagion.cabal
+++ b/trisagion.cabal
@@ -27,6 +27,7 @@ library
         DerivingStrategies
         DerivingVia
         FunctionalDependencies
+        RequiredTypeArguments
     ghc-options:
         -Wall
         -Wcompat
@@ -63,3 +64,4 @@ library
         Trisagion.Parsers.Streamable
         Trisagion.Parsers.Splittable
         Trisagion.Parsers.Word8
+        Trisagion.Parsers.Char
