--- a/trisagion.cabal
+++ b/trisagion.cabal
@@ -57,11 +57,11 @@ library
         Trisagion.Types.ParseError
         Trisagion.Utils.Integral
         Trisagion.ParserT
-        Trisagion.Typeclasses.HasOffset
-        Trisagion.Typeclasses.Streamable
-        -- Trisagion.Typeclasses.Splittable
         Trisagion.Parsers.Combinators
-        Trisagion.Parsers.ParseError
+        Trisagion.Typeclasses.Streamable
+        Trisagion.Typeclasses.HasOffset
+        Trisagion.Typeclasses.Splittable
+        -- Trisagion.Parsers.ParseError
         -- Trisagion.Parsers.Splittable
         -- Trisagion.Parsers.Word8
         -- Trisagion.Parsers.Char
