--- a/trisagion.cabal
+++ b/trisagion.cabal
@@ -52,15 +52,17 @@ library
     build-depends:
     other-modules:
     exposed-modules:
-        Trisagion.Types.Either
+        Trisagion.Utils.Bits
+        Trisagion.Utils.List
+        Trisagion.Utils.Either
         Trisagion.Types.Result
         Trisagion.Types.ParseError
-        Trisagion.Utils.Integral
         Trisagion.ParserT
         Trisagion.Parsers.Combinators
         Trisagion.Typeclasses.Streamable
         Trisagion.Typeclasses.HasOffset
         Trisagion.Typeclasses.Splittable
-        Trisagion.Parsers.ParseError
+        -- Trisagion.Typeclasses.Binary
+        -- Trisagion.Parsers.ParseError
         -- Trisagion.Parsers.Word8
         -- Trisagion.Parsers.Char
