--- a/trisagion.cabal
+++ b/trisagion.cabal
@@ -62,7 +62,6 @@ library
         Trisagion.Typeclasses.Streamable
         Trisagion.Typeclasses.HasOffset
         Trisagion.Typeclasses.Splittable
-        -- Trisagion.Typeclasses.Binary
+        Trisagion.Typeclasses.Binary
         -- Trisagion.Parsers.ParseError
-        -- Trisagion.Parsers.Word8
         -- Trisagion.Parsers.Char
