--- a/trisagion.cabal
+++ b/trisagion.cabal
@@ -66,5 +66,5 @@ library
         Trisagion.Parsers.Streamable
         Trisagion.Parsers.HasOffset
         Trisagion.Parsers.ParseError
-        -- Trisagion.Parsers.Splittable
+        Trisagion.Parsers.Splittable
         -- Trisagion.Parsers.Char
