--- a/trisagion.cabal
+++ b/trisagion.cabal
@@ -67,4 +67,4 @@ library
         Trisagion.Parsers.HasOffset
         Trisagion.Parsers.ParseError
         Trisagion.Parsers.Splittable
-        -- Trisagion.Parsers.Char
+        Trisagion.Parsers.Char
